--- a/app/src/main/res/layout/activity_words.xml
+++ b/app/src/main/res/layout/activity_words.xml
@@ -29,12 +29,15 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="13dp"
-        android:id="@+id/wordScroll">
+        android:id="@+id/wordScroll"
+        android:layout_above="@+id/finishButton"
+        android:layout_marginBottom="13dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical"
+            android:id="@+id/layoutWord" />
     </ScrollView>
 
     <Button
