--- a/app/src/main/res/layout/activity_words.xml
+++ b/app/src/main/res/layout/activity_words.xml
@@ -47,5 +47,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="17dp"
-        android:id="@+id/finishButton" />
+        android:id="@+id/finishButton"
+        android:onClick="finishListener"
+        />
 </RelativeLayout>
